// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PopoverDisplay /> rendered correctly with base fixture 1`] = `
<PopoverDisplay>
  <div
    className="popover"
    role="tooltip"
  >
    <div
      className="content"
    >
      <div>
        <b>
          I can contain any content you desire
        </b>
        <p>
          Just watch me
        </p>
      </div>
    </div>
  </div>
</PopoverDisplay>
`;

exports[`<PopoverDisplay /> rendered correctly with light fixture 1`] = `
<PopoverDisplay
  light={true}
>
  <div
    className="popover light"
    role="tooltip"
  >
    <div
      className="content"
    >
      <div>
        <b>
          I can contain any content you desire
        </b>
        <p>
          Just watch me
        </p>
      </div>
    </div>
  </div>
</PopoverDisplay>
`;

exports[`<PopoverDisplay /> rendered correctly with tooltip fixture 1`] = `
<PopoverDisplay
  tooltip={true}
>
  <div
    className="popover tooltip"
    role="tooltip"
  >
    <div
      className="content tooltip"
    >
      I am a single-line tooltip
    </div>
  </div>
</PopoverDisplay>
`;
